--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -5,11 +5,23 @@ footer {
   display: none !important;
 }
 
-a {
+a,
+a:link,
+a:visited,
+a:hover,
+a:active {
+  font-size: 1em !important;
   font-size: inherit !important;
 }
 
 .post__content a,
-.content a {
+.content a,
+.post a,
+article a,
+main a {
+  font-size: 1em !important;
+}
+
+p a {
   font-size: inherit !important;
 }
