--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,16 +20,20 @@ a {
 }
 
 /* Fix mobile scrolling */
-html, body {
+html {
   overflow-x: hidden;
-  max-width: 100%;
+  overflow-y: auto;
 }
 
 body {
+  overflow-x: hidden;
   min-height: 100vh;
   height: auto;
+  margin: 0;
+  padding: 0;
 }
 
-main {
+.post__wrapper {
+  min-height: auto;
   padding-bottom: 2rem;
 }
